[package]
name        = "xkcd-bin"
version     = "0.2.2"
authors     = ["Rodrigo Montegasppα Cacilhας <montegasppa@cacilhas.info>"]
license     = "BSD-3-Clause"
readme      = "README.md"
homepage    = "https://crates.io/crates/xkcd-bin"
repository  = "https://github.com/cacilhas/xkcd-bin"
keywords    = ["cli", "xkcd"]
description = "Just a CLI to show xkcd.com comics in terminal."
edition     = "2021"

[profile.release]
opt-level = "s"
panic = "abort"
debug = false
lto   = true
rpath = false
strip = true

[dependencies]
chrono = "0.4"
color-eyre = "0.6"
eyre = "0.6"
kitty_image = "0.1"
image = "0.25"
random = "0.14"
serde_json = "1.0"
webbrowser = "1.0"

[dependencies.clap]
version = "4.5"
features = ["color", "help", "std", "suggestions", "usage", "derive"]

[dependencies.reqwest]
version = "0.12"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.40"
features = ["full"]

[[bin]]
name = "xkcd"
path = "src/bin/main.rs"
